More mypy ignores

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,4 +1,12 @@
+[mypy]
+
 [mypy-astropy.*]
+ignore_missing_imports = True
+
+[mypy-demregpy.*]
+ignore_missing_imports = True
+
+[mypy-numpy.*]
 ignore_missing_imports = True
 
 [mypy-scipy.*]
