--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,15 @@ dependencies = [
     "numpy",
     "scipy",
     "sunpy",
+
+    "demregpy==0.6.2",
+]
+
+[project.optional-dependencies]
+docs = [
+    "pydata-sphinx-theme",
+    "sphinx",
+    "sphinx-gallery"
 ]
 
 [mypy-astropy]
