--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,3 +22,8 @@ repos:
         - id: mypy
           additional_dependencies: [types-setuptools]
           args: ['--strict']
+
+    -   repo: https://github.com/pre-commit/pre-commit-hooks
+        rev: v4.3.0
+        hooks:
+        -   id: check-yaml
