Add myst_parser to doc req

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
 
 [project.optional-dependencies]
 docs = [
+    "myst_parser",
     "numpydoc",
     "pydata-sphinx-theme",
     "sphinx",
