--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,3 +27,9 @@ repos:
         rev: v4.3.0
         hooks:
         -   id: check-yaml
+
+    - repo: https://github.com/codespell-project/codespell
+      rev: v2.2.2
+      hooks:
+        - id: codespell
+          args: ['--toml pyproject.toml']
